# Tram_SECSPEC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  Tram_Netwerk  Tram_Netwerk.cbp  Tram_Netwerk_debug  cmake_install.cmake
Contracts/: Contract_Parser.txt  Contract_Station.txt  Contract_System.txt  Contract_Tram.txt
InputFiles/: XML_Test.xml  non-circular-test.xml
LogFiles/: autoSimulation.txt  errorLog.txt  outputLog.txt  parserLog.txt  ronde_rijden.txt
Tests/: SystemDomainTests.cpp  SystemInputTests.cpp  SystemOutputTests.cpp  SystemTests.cpp  TestUtils.h
html/: Albatros_8h.html  Albatros_8h__incl.map  Albatros_8h__incl.md5  Albatros_8h_source.html  DesignByContract_8h_source.html  Halte_8h.html  Halte_8h__incl.map  Halte_8h__incl.md5  Halte_8h_source.html  Metrostation_8h.html  Metrostation_8h__incl.map  Metrostation_8h__incl.md5  Metrostation_8h_source.html  PCC_8h_source.html  Parser_8h.html  Parser_8h__incl.map  Parser_8h__incl.md5  Parser_8h_source.html  Passagier_8h.html  Passagier_8h__dep__incl.map  Passagier_8h__dep__incl.md5  Passagier_8h__incl.map  Passagier_8h__incl.md5  Passagier_8h_source.html  Spoor_8h.html  Spoor_8h__dep__incl.map  Spoor_8h__dep__incl.md5  Spoor_8h__incl.map  Spoor_8h__incl.md5  Spoor_8h_source.html  Station_8h.html  Station_8h__dep__incl.map  Station_8h__dep__incl.md5  Station_8h__incl.map  Station_8h__incl.md5  Station_8h_source.html  System_8h.html  System_8h__dep__incl.map  System_8h__dep__incl.md5  System_8h__incl.map  (+185 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  (+3 more)
latex/: Albatros_8h.tex  Albatros_8h__incl.md5  Halte_8h.tex  Halte_8h__incl.md5  Metrostation_8h.tex  Metrostation_8h__incl.md5  Parser_8h.tex  Parser_8h__incl.md5  Passagier_8h.tex  Passagier_8h__dep__incl.md5  Passagier_8h__incl.md5  Spoor_8h.tex  Spoor_8h__dep__incl.md5  Spoor_8h__incl.md5  Station_8h.tex  Station_8h__dep__incl.md5  Station_8h__incl.md5  System_8h.tex  System_8h__dep__incl.md5  System_8h__incl.md5  Tram_8h.tex  Tram_8h__dep__incl.md5  Tram_8h__incl.md5  annotated.tex  classAlbatros.tex  classAlbatros__coll__graph.md5  classHalte.tex  classHalte__coll__graph.md5  classMetrostation.tex  classMetrostation__inherit__graph.md5  classPCC.tex  classPCC__coll__graph.md5  classParser.tex  classPassagier.tex  classSpoor.tex  classStation.tex  classSystem.tex  classTiXmlAttribute.tex  classTiXmlAttributeSet.tex  classTiXmlAttribute__coll__graph.md5  (+52 more)
src/: Albatros.cpp  Albatros.h  DesignByContract.h  Halte.h  Metrostation.cpp  PCC.cpp  PCC.h  Parser.cpp  Parser.h  Passagier.cpp  Passagier.h  Spoor.cpp  Spoor.h  Station.cpp  Station.h  System.cpp  System.h  SystemTests.cpp  TestUtils.cpp  Tram.cpp  Tram.h  main.cpp
src/Parser/: .Parser.cpp.swp  Parser.cpp  Parser.h
src/Passagier/: Passagier.cpp  Passagier.h
src/Spoor/: Spoor.cpp  (+1 more)
testInput/: BeginStationTram.xml  HappyDay.xml  I_TramType.xml  InvalidCircuit.xml  L_PassagiersAantal.xml  L_StationSpoor.xml  L_TramLijnNr.xml  L_TramSnelheid.xml  L_TramZitplaatsen.xml  L_VoertuigNr.xml  MultipleErrors.xml  N_PassagiersAantal.xml  N_StationSpoor.xml  N_TramLijnNr.xml  N_TramSnelheid.xml  N_TramZitplaatsen.xml  N_VoertuigNr.xml  NoPassengerArrival.xml  PassagierBeginStation.xml  PassagierEindStation.xml  PassagiersAantal.xml  PassagiersNaam.xml  StationSpoor.xml  StationsNaam.xml  TramLijnNr.xml  TramSnelheid.xml  TramType.xml  TramZitplaatsen.xml  VoertuigNr.xml  VolgendStation.xml  VorigStation.xml  testInput1.xml  testInput2.xml
testOutput/: outputFile1.txt  ronde_expected.txt
(+48 files in other folders)
